--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" data-theme="light">
+<html lang="en" data-theme="dracula">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/logo" href="/logo.png" />
